# ecocor-tokenizer

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
ecocor_tokenizer/: __init__.py  cli.py  export.py  extract.py  gold.py  tei.py  tokenizer.py
tests/: test_pure.py  test_tei_io.py
